GNOME Bugzilla – Bug 668113
about dialog isn't modal
Last modified: 2012-01-19 23:49:39 UTC
The about dialog isn't modal and shows up in the gnome 3 overview. It should either be a modal dialog or be shown in the window itself as an "about:" page.
Oh also, maybe we shouldn't show "Web Website" in the about dialog. Or maybe call it "Developer site" or something.
I can do this one quickly, I think.
Created attachment 205480 [details] [review] ephy-shell: pass active window to the about dialog So it can be modal.
Isn't odd to have a global action be attached to a (random-ish) window? I think I wouldn't do this.
The focused window isn't at all random. There has to be a window that you load new links into anyway... About windows should not be toplevel managed windows.
Well, it's attached to the active window. I do think it's weird that the about dialog is floating freely, given other applications have it attached. OTOH, if we make the dialog modal to the window, it apparently blocks other windows. Just like those old peeves we have/had with some modal dialogs.
(In reply to comment #5) > The focused window isn't at all random. There has to be a window that you load > new links into anyway... It's random in the sense that the about dialog is now launched from the app menu, so we are just using the last active epiphany window. We could be using any other. > > About windows should not be toplevel managed windows. I think the point is that about dialogs don't work very well when launched from the app menu. I'd vote to move it to "about:" as we discussed. If we want to launch it from the app menu then I'd launch a new window with "about:" loaded, I guess.
Launching a new window seems like the worst solution, to be honest. The point is that we want to reduce the number of managed windows. We really expect there to be one window for most people, and there is only one active window at any time. If you don't like using a modal window then just load "about:" into the active window as a tab/page.
I think going forward I'd just get rid of About in the app menu and have the information accessible only by typing "about:" in the URL entry. In the meantime we can commit this, though.
Review of attachment 205480 [details] [review]: OK.
Attachment 205480 [details] pushed as 1d566cf - ephy-shell: pass active window to the about dialog