ephy-shell: pass active window to the about dialog

So it can be modal.

https://bugzilla.gnome.org/show_bug.cgi?id=668113